@@ -4,7 +4,7 @@ buildscript {
       mavenLocal()
    }
    dependencies {
-      classpath "us.ihmc:ihmc-build:0.11.0"
+      classpath "us.ihmc:ihmc-build:0.13.0"
    }
 }
 apply plugin: "us.ihmc.ihmc-build"
@@ -16,26 +16,30 @@ ihmc {
    configurePublications()
 }
 
+// compileJava {
+//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+// }
+
 testSuites {
    def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
    bambooPlanKeys = [prefix + "FAST", prefix + "INDEVELOPMENT", prefix + "UI", prefix + "VIDEO"]
 }
 
 mainDependencies {
-   compile group: 'us.ihmc', name: 'euclid-core', version: '0.4.13'
+   compile group: 'us.ihmc', name: 'euclid-core', version: '0.5.1'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-   compile group: "us.ihmc", name: "ihmc-commons", version: "0.17.0"
-   compile group: "us.ihmc", name: "ihmc-robot-description", version: groupDependencyVersion
-   compile group: "us.ihmc", name: "ihmc-graphics-description", version: groupDependencyVersion
-   compile group: "us.ihmc", name: "ihmc-robotics-toolkit", version: groupDependencyVersion
-   compile group: "us.ihmc", name: "ihmc-java-toolkit", version: groupDependencyVersion
-   compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: groupDependencyVersion
+   compile group: "us.ihmc", name: "ihmc-commons", version: "0.18.0"
+   compile group: "us.ihmc", name: "ihmc-robot-description", version: "source"
+   compile group: "us.ihmc", name: "ihmc-graphics-description", version: "source"
+   compile group: "us.ihmc", name: "ihmc-robotics-toolkit", version: "source"
+   compile group: "us.ihmc", name: "ihmc-java-toolkit", version: "source"
+   compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: "source"
 }
 
 testDependencies {
-   compile group: "us.ihmc", name: "ihmc-ci-core-api", version: "0.17.0"
+   compile group: "us.ihmc", name: "ihmc-ci-core-api", version: "0.17.7"
    compile group: "junit", name: "junit", version: "4.12"
-   compile group: "us.ihmc", name: "ihmc-commons-testing", version: "0.17.0"
-   compile group: "us.ihmc", name: "ihmc-robotics-toolkit-test", version: groupDependencyVersion
-   compile group: "us.ihmc", name: "simulation-construction-set-test", version: groupDependencyVersion
+   compile group: "us.ihmc", name: "ihmc-commons-testing", version: "0.18.0"
+   compile group: "us.ihmc", name: "ihmc-robotics-toolkit-test", version: "source"
+   compile group: "us.ihmc", name: "simulation-construction-set-test", version: "source"
 }
